fix image distortion issues

--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -4884,7 +4884,6 @@ only screen and (min-resolution: 2dppx) {
 .icon-box__button--main {
     background: #7C959E;
     margin: 0 0 10px;
-    height: 72px;
 }
 .page-intro .icon-box__button--main {
     min-width: 250px;
@@ -6211,11 +6210,22 @@ figure.nav-overlay {
 }
 
 .module__heading {
-    font-size: 35px;
-    line-height: 40px;
+    font-size: 33px;
+    line-height: 38px;
     font-weight: bold;
-    margin: 0 0 30px;
+    margin: 0 0 20px;
     text-align: center;
+}
+@media (min-height: 900px) {
+    .module__heading {
+        font-size: 35px;
+        line-height: 40px;
+    }
+}
+@media (min-height: 992px) {
+    .module__heading {
+        margin: 0 0 30px;
+    }
 }
 @media (max-width: 767px) {
     .accent-heading {
@@ -6232,11 +6242,19 @@ figure.nav-overlay {
 }
 .module__body {
     font-size: 24px;
-    line-height: 33px;
+    line-height: 30px;
     margin: 0 auto 25px;
     max-width: 780px;
     text-align: center;
     padding: 0 1em;
+}
+.module__body + .button-callout {
+    margin-top: 2em;
+}
+@media (min-width:900px) {
+    .module__body {
+        line-height: 33px;
+    }
 }
 .module__body--left {
     text-align: left;
@@ -6422,9 +6440,20 @@ figure.nav-overlay {
 .button--brown {
     color: #FFF;
     background: #89847b;
-    line-height: 2em;
-    padding: 20px;
-    font-size: 18px;
+    padding: 16px;
+    font-size: 16px;
+    line-height: 1.5em;
+}
+@media (min-width: 992px) {
+    .button--brown {
+        padding: 16px;
+        font-size: 16px;
+    }
+}
+@media (min-width: 1299px) {
+    .button--brown {
+        line-height: 2em;
+    }
 }
 .button--brown:hover,
 .button--brown:focus {
@@ -6564,6 +6593,9 @@ figure.nav-overlay {
     color: black;
     font-size: 18px;
 }
+.story-text--left {
+    text-align: left;
+}
 @media (max-width: 767px) {
     .module-wrap--watch iframe {
         left: 20px;
@@ -6584,35 +6616,97 @@ figure.nav-overlay {
     position: relative;
     min-width: 100%;
     width: 100%;
-    padding-bottom: calc(30% - 500px);
+    padding-bottom: calc(30% - 350px);
+    transition: background-image 250ms ease-out;
 }
 .module-wrap--background .module__head {
     font-size: 33px;
 }
 main .module-wrap--background {
-    height: 500px;
+    height: 300px;
+    padding-bottom: calc(30% - 300px);
+    transition: height 150ms ease-in;
 }
+@media (min-width: 991px) {
+    main .module-wrap--background {
+        padding-bottom: calc(30% - 300px);
+        height: 300px;
+    }
+}
+@media (min-width: 1199px) {
+    main .module-wrap--background {
+        padding-bottom: calc(30% - 400px);
+        height: 400px;
+    }
+}
+@media (min-width: 1299px) {
+    .module-wrap--background {
+        padding-bottom: calc(30% - 500px);
+    }
+    main .module-wrap--background {
+        height: 500px;
+    }
+}
+
 @media (min-width: 992px) {
+    main .module-wrap--background .button-callout{
+        margin-top: -2.5em;
+    }
+}
+
+@media (min-width: 1199px) {
+    main .module-wrap--background .button-callout{
+        margin-top: -1em;
+    }
+}
+@media (min-width: 1299px) {
     main .module-wrap--background .button-callout{
         margin-top: 5em;
     }
 }
 .module-wrap--background .module__body {
-    padding: 0 3em;
+    padding: 0 1em;
     min-height: 100px;
+}
+@media (min-width: 728px) {
+    .module-wrap--background .module__body {
+        padding: 0 2em;
+    }
+}
+@media (min-width: 992px) {
+    .module-wrap--background .module__body {
+        padding: 0 3em;
+    }
 }
 .module-wrap--background img {
     display: none;
+    transition: all 250ms ease-in;
 }
 .module-wrap--background .module {
     z-index: 2;
+    padding: 20px 0;
+}
+@media (min-width: 900px) {
+    .module-wrap--background .module {
+        padding: 30px 0;
+    }
+}
+@media (min-width: 1200px) {
+    .module-wrap--background .module {
+        padding: 70px 0;
+    }
+}
+@media (min-width: 1299px) {
+    .module-wrap--background .module {
+        padding: 90px 0;
+    }
 }
 @media (max-width: 819px) {
     .module-wrap--background .module {
         margin: 0 0.5em;
     }
 }
-@media (max-width: 991px) {
+@media (max-width: 990px) {
     main .module-wrap--background {
         background: #5d5a55;
         background-image: none !important;
@@ -6623,7 +6717,7 @@ main .module-wrap--background {
     }
     img.mobile {
         display: block;
-        width: 400px;
+        width: 350px;
         max-width: 100%;
         margin: 0 auto 1.5em auto;
     }
@@ -6697,8 +6791,8 @@ aside .module--flex {
 }
 
 .sprout-video-container {
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
+    margin-top: 2em;
+    margin-bottom: 2em;
     position: relative;
     padding-top: 0px;
     padding-bottom: 56.25%;
@@ -7247,8 +7341,9 @@ aside .module--flex {
     color: #FFF;
 }
 .home--registration-container p {
-    font-size: 1.2em;
+    font-size: 1.1em;
     padding: 1em 0;
+    font-weight: normal;
 }
 nav.side-nav::-webkit-scrollbar,
 div.home--item-container::-webkit-scrollbar,
